# hop3

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Justfile  Makefile  README.md  REUSE.toml  TODO.md  Vagrantfile  check.sh  duties.py  flake.nix  guix.scm  mkdocs.yml  noxfile.py  pyproject.toml  ruff.toml  setup.cfg  tasks.py  wsgi.py
.build-ignore/: 00readme.md  alpine.yml  archlinux.yml  freebsd.yml  nixos.yml  ubuntu-lts.yml
.builds/: 00readme.md  alpine.yml  archlinux.yml  debian-stable.yml  debian.yml  fedora.yml  freebsd.yml  guix.yml  netbsd.yml  nixos.yml  openbsd.yml  readme.md  rockylinux.yml  ubuntu-lts.yml  ubuntu.yml  ubuntu2204.yml  ubuntu2404.yml
.github/: ISSUE_TEMPLATE.md
.reuse/: dep5
apps/: readme.md
apps/test-apps/110-flask-gunicorn-poetry/: pyproject.toml
apps/test-apps/110-flask-gunicorn-poetry/src/app/: main.py
compliance/: README.md  requirements-full.txt  requirements-prod.txt  (+3 more)
hop3-agent/: Makefile  noxfile.py  pyproject.toml
hop3-agent/src/hop3/: deploy.py  main.py
hop3-agent/src/hop3/actors/mailbox/: base.py  sqs.py
hop3-agent/src/hop3/addons/: base.py  postgres.py
hop3-agent/src/hop3/builders/: __init__.py  _base.py  base.py  clojure.py  go.py  java.py  node.py  php.py  python.py  ruby.py  rust.py  util.py
hop3-agent/src/hop3/commands/: __init__.py  apps.py  cli.py  config.py  git.py  misc.py  setup.py  types.py  util.py
hop3-agent/src/hop3/commands/plugins/: postgresql.py  redis.py
hop3-agent/src/hop3/core/: app.py  env.py  events.py  git.py  hookspecs.py  plugins.py  types.py
hop3-agent/src/hop3/core/tests/: test_env.py
hop3-agent/src/hop3/model/: __init__.py  _base.py  app.py  backup.py  env.py  instance.py  security.py
hop3-agent/src/hop3/oses/: __init__.py  common.py  debian.py  helpers.py  nixos.py  ubuntu2204.py
hop3-agent/src/hop3/plugins/: __init__.py
hop3-agent/src/hop3/project/: config.py  procfile.py
hop3-agent/src/hop3/proxies/: __init__.py
hop3-agent/src/hop3/proxies/nginx/: __init__.py  certificates.py  setup.py  templates.py
hop3-agent/src/hop3/run/: __init__.py  spawn.py
hop3-agent/src/hop3/run/uwsgi/: __init__.py  settings.py  test_settings.py  worker.py
hop3-agent/src/hop3/services/: config.py
hop3-agent/src/hop3/system/: __init__.py  config.py  constants.py  state.py
hop3-agent/src/hop3/testing/: __init__.py  base.py  common.py  main.py
hop3-agent/src/hop3/util/: __init__.py  backports.py  console.py  datetime.py  delegate.py  freeze.py  path.py  path_test.py  settings.py  templating.py  templating_test.py  util.py
hop3-agent/src/hop3/util/tests/: test_delegate.py  test_path.py
hop3-agent/tests/: __init__.py
hop3-agent/tests/integration/: test_cli.py
hop3-agent/tests/unit/: test_cli.py  test_config.py  test_frozen.py  test_installer.py  test_procfile.py  test_var_expansion.py
hop3-agent/tests/unit/nginx/: test_setup.py
hop3-cli/: Makefile  README.md  pyproject.toml
hop3-cli/sandbox/: ssh.py
hop3-cli/src/hop3_cli/: config.py  context.py  main.py  printer.py  state.py
hop3-cli/src/hop3_cli/commands/: __init__.py  _base.py  _colors.py  apps.py  debug.py  help.py
hop3-cli/tests/: test_main.py
hop3-lib/: README.md  pyproject.toml
hop3-lib/src/hop3_lib/actors/: actor.py  message.py
hop3-lib/src/hop3_lib/actors/mailbox/: __init__.py  base.py  ipc.py  kombu.py  local.py  tcp.py  zmq.py
hop3-lib/src/hop3_lib/bus/: main.py  transactions.py  web.py
hop3-lib/src/hop3_lib/bus/tests/: test_all.py
hop3-lib/src/hop3_lib/util/: settings.py  templating_test.py  util.py
hop3-lib/tests/: test_main.py
hop3-server/: Makefile  README.md  noxfile.py  pyproject.toml
hop3-server/sandbox/: client.py
hop3-server/src/hop3_server/: asgi.py  main.py  routes.py
hop3-server/src/hop3_server/commands/: _base.py  apps.py  base.py  config.py  system.py
hop3-server/src/hop3_server/rpc/: jsonrpc.py  service.py
hop3-server/src/hop3_server/service/: __init__.py  api.py  constants.py  logs.py  model.py  procfile.py  settings.py
hop3-server/src/hop3_server/utils/: console.py  scanner.py
hop3-server/tests/: test_main.py
hop3-testing/: pyproject.toml
hop3-testing/src/hop3_testing/: base.py  main.py
hop3-web/: Makefile  pyproject.toml
hop3-web/src/hop3_web/: __init__.py
hop3-web/src/hop3_web/models/: _base.py  auth.py
hop3-web/src/hop3_web/web/: extensions.py  main.py  menus.py  setup.py  utils.py
hop3-web/src/hop3_web/web/blueprints/admin/: __init__.py  views.py
hop3-web/src/hop3_web/web/blueprints/user/: __init__.py  views.py
hop3-web/src/hop3_web/web/security/: __init__.py  datastore.py  forms.py  security.py
packages-ignored/hop3-server-old/: Makefile  pyproject.toml
packages-ignored/hop3-server-old/src/hop3_server/: __init__.py  routes.py
packages-ignored/hop3-server-old/src/hop3_server/commands/: _base.py  apps.py  system.py
packages-ignored/hop3-server-old/src/hop3_server/service/: __init__.py  api.py  constants.py  procfile.py
packages-ignored/hop3-server-old/src/hop3_server/utils/: scanner.py
packages-ignored/hop3-server-old/ssl/: cert.pem  certificate.pem  certificate_request.csr  key.pem  private_key.pem
packages-ignored/hop3-web/: Makefile  Procfile-dev  README.md  pyproject.toml  wsgi.py
packages-ignored/hop3-web/src/hop3_web/: __init__.py
packages-ignored/hop3-web/src/hop3_web/lib/: __init__.py  backports.py  console.py  sh.py  types.py  utils.py
packages-ignored/hop3-web/src/hop3_web/orm/: __init__.py  _base.py  auth.py
packages-ignored/hop3-web/src/hop3_web/services/: database_connection.py
packages-ignored/hop3-web/src/hop3_web/web/: extensions.py  main.py  setup.py
packages-ignored/hop3-web/src/hop3_web/web/blueprints/user/: views.py
packages-ignored/hop3-web/src/hop3_web/web/security/: __init__.py  forms.py  security.py
packages-ignored/hop3-web/src/hop3_web/web/templates/: _layout.html
packages-ignored/hop3-web/tests/: conftest.py  test_main.py
packages-ignored/hop3-web/vite/: package-lock.json  package.json  vite.config.mjs
packages-ignored/hop3-web/vite/src/: styles.css
(+314 files in other folders)
