#
# Migration to uv. WIP.
#
[project]
name = "hop3"
version = "0.2.2"
description = "Simple PaaS - Deploy and manage web applications on a single server"
authors = [
    { name = "Stefane Fermigier", email = "sf@abilian.com" },
]
readme = "README.md"
#license = "Apache-2.0"
requires-python = "~=3.10"

dependencies = [
    # Workspace
    "hop3-lib",
    "hop3-agent",
    "hop3-cli",
    "hop3-server",
    "hop3-web",

    # Debug (remove later)
    "devtools ~= 0.12",
    "snoop ~= 0.6",

    # Used by manual install (remove later)
    "invoke ~= 2.2.0",
    "tomlkit",
    "cleez",
    "python-dotenv",
]

[tool.uv]
dev-dependencies = [
    # Generic tools
    "abilian-devtools ~= 0.7",
    "reuse ~= 4.0",
    # Used by `inv watch`
    "watchfiles ~= 0.24.0",
    # Used by testing infra
    "httpx ~= 0.27.0",
    "python-dotenv ~= 1.0.1",
    # Experimental
    "infer-types ~= 1.0.0",
    # Installer
    "pyinfra ~= 3.0",
    # Type helpers
    "types-toml>=0.10.8.20240310",
    "types-requests>=2.32.0.20241016",
    "types-paramiko>=3.5.0.20240928",
    "types-pytz>=2024.2.0.20241003",
    "types-tabulate>=0.9.0.20240106",
]

[tool.uv.sources]
hop3-lib = { workspace = true }
hop3-agent = { workspace = true }
hop3-cli = { workspace = true }
hop3-server = { workspace = true }
hop3-web = { workspace = true }

[tool.uv.workspace]
members = [
    "hop3-lib",
    "hop3-agent",
    "hop3-cli",
    "hop3-server",
    "hop3-web", "hop3-testing",
]


## ------------------------------------
#
#[tool.poetry]
#name = "hop3"
#version = "0.2.2"
#description = "Simple PaaS - Deploy and manage web applications on a single server"
#authors = ["Stefane Fermigier <sf@abilian.com>"]
#readme = "README.md"
#license = "Apache-2.0"
#
##packages = [
##    { include = "hop3", from = "src" },
##    #    { include = "hop3_main", from = "src" },
##]
#
#package-mode = false
#
#[tool.poetry.scripts]
#hop-agent = "hop3.main:main"
#hop-test = "hop3.testing.main:main"
#
#
#[tool.poetry.dependencies]
#python = "^3.10"
#
## Debug (remove later)
#devtools = "^0.12.2"
#snoop = "^0.6"
#
## Used by manual install (remove later)
#invoke = "^2.2.0"
#tomlkit = "*"
#cleez = "*"
#python-dotenv = "*"
#
#
#[tool.poetry.group.dev.dependencies]
## Generic tools
#abilian-devtools = "^0.6"
#reuse = "^4"
#
## Used by `inv watch`
#watchfiles = "^0.24.0"
#
## Used by testing infra
#httpx = "^0.27.0"
#python-dotenv = "^1.0.1"
#
## Experimental
#infer-types = "^1.0.0"
#
## Installer
#pyinfra = "^3"
#
## Not needed in theory (declared in hop3-agent)
#types-psycopg2 = "^2.9.21.20241019"
#types-paramiko = "^3.5.0.20240928"
#
## Documentation
#pdoc3 = "^0.11.1"

# ------------------------------------

[tool.pyright]
exclude = [
    "src/hop3/util/templating.py",
]

# ------------------------------------

[tool.pytest.ini_options]
# See: https://docs.pytest.org/en/7.1.x/explanation/pythonpath.html#import-modes
# and: https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html#choosing-an-import-mode
addopts = "-ra --import-mode=importlib"
testpaths = [
    "tests",
    "hop3-*/tests",
    # Tests may be in the same directory as the code
    "src",
    "hop3-*/src",
]

# ------------------------------------

[tool.coverage.report]
exclude_also = [
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]
