[project]
name = "hop3"
version = "0.2.2"
description = "Simple PaaS - Deploy and manage web applications on a single server"
authors = [
    { name = "Stefane Fermigier", email = "sf@abilian.com" },
]
readme = "README.md"
#license = "Apache-2.0"
requires-python = "~=3.10"

dependencies = [
    # Workspace
    "hop3-lib",
    "hop3-agent",
    "hop3-cli",
    "hop3-server",
    "hop3-web",
    "hop3-testing",

    # Debug (remove later)
    "devtools ~= 0.12",
    "snoop ~= 0.6",

    # Used by manual install (remove later)
    "invoke ~= 2.2.0",
    "tomlkit",
    "cleez",
    "python-dotenv",
]

[tool.uv]
package = false
dev-dependencies = [
    # Generic tools
    "abilian-devtools ~= 0.7",
    "reuse ~= 4.0",
    # Used by `inv watch`
    "watchfiles ~= 0.24.0",
    # Used by testing infra
    "httpx ~= 0.27.0",
    "python-dotenv ~= 1.0.1",
    # Experimental
    "infer-types~=1.0.0",
    # Installer
    "pyinfra ~= 3.0",
    # Type helpers
    "types-toml>=0.10.8.20240310",
    "types-requests>=2.32.0.20241016",
    "types-paramiko>=3.5.0.20240928",
    "types-pytz>=2024.2.0.20241003",
    "types-tabulate>=0.9.0.20240106",
    "beartype>=0.19.0",
    "pytest-beartype>=0.2.0",
    "import-linter>=2.1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
hop3-lib = { workspace = true }
hop3-agent = { workspace = true }
hop3-cli = { workspace = true }
hop3-server = { workspace = true }
hop3-web = { workspace = true }
hop3-testing = { workspace = true }

# ------------------------------------

[tool.pytest.ini_options]
# See: https://docs.pytest.org/en/7.1.x/explanation/pythonpath.html#import-modes
# and: https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html#choosing-an-import-mode
addopts = "-ra --import-mode=importlib"
testpaths = [
    "packages/*/tests",
    # Tests may be in the same directory as the code
    "packages/*/src",
]

# ------------------------------------

[tool.coverage.report]
exclude_also = [
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]

# ------------------------------------

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_no_return = true
warn_unused_ignores = true
check_untyped_defs = true

exclude = [
  "^packages/hop3-agent/src/hop3/builders/java\\.py$",
]
