[project]
name = "hop3"
version = "0.2.2"
description = "Simple PaaS - Deploy and manage web applications on a single server"
authors = [
    { name = "Stefane Fermigier", email = "sf@abilian.com" },
]
readme = "README.md"
requires-python = "~=3.10"

dependencies = [
    # Workspace
    "hop3-agent",
    "hop3-testing",
    #    "hop3-lib",
    #    "hop3-cli",
    #    "hop3-server",
    #    "hop3-web",
    # Debug (remove later)
    "devtools ~= 0.12",
    "snoop ~= 0.6",
    # Used by manual install (remove later)
    "invoke ~= 2.2.0",
    "tomlkit",
    "python-dotenv",
]

# ------------------------------------

[tool.uv]
package = false
dev-dependencies = [
    # Generic tools
    "abilian-devtools >= 0.7",
    "reuse >= 5.0",
    # Used by `inv watch`
    "watchfiles >= 0.24.0",
    # Used by testing infra
    "httpx >= 0.27.0",
    "python-dotenv >= 1.0.1",
    # Experimental
    "infer-types~=1.0.0",
    # Installer
    "pyinfra ~= 3.0",
    # Type helpers
    "types-toml>=0.10.8.20240310",
    "types-requests>=2.32.0.20241016",
    "types-paramiko>=3.5.0.20240928",
    "types-pytz>=2024.2.0.20241003",
    "types-tabulate>=0.9.0.20240106",
    # Type checking
    "beartype>=0.19.0",
    "pytest-beartype>=0.2.0",
    # More tools
    "import-linter>=2.1",
    # Doc (temp - this should go in hop3-docs)
    "duty>=1.4.3",
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-include-markdown-plugin",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-roamlinks-plugin",
    "mkdocstrings[python]",
    "pygments",
    "urllib3",
    # SBOM
    "cyclonedx-bom>=4.6.1",
    "lbom>=0.6",
    "sbom4python>=0.11.3",
    "spdx-tools>=0.8.3",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
hop3-lib = { workspace = true }
hop3-agent = { workspace = true }
hop3-cli = { workspace = true }
hop3-server = { workspace = true }
hop3-web = { workspace = true }
hop3-testing = { workspace = true }

# ------------------------------------

[tool.isort]
profile = "black"

# ------------------------------------

[tool.pytest.ini_options]
# See: https://docs.pytest.org/en/7.1.x/explanation/pythonpath.html#import-modes
# and: https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html#choosing-an-import-mode
addopts = "-ra --import-mode=importlib"
testpaths = [
    "packages/hop3-agent/tests",
    "packages/hop3-agent/src",
    # Disabled for now
    #    "packages/*/tests",
    #    # Tests may be in the same directory as the code
    #    "packages/*/src",
]

# ------------------------------------

[tool.coverage.report]
exclude_also = [
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]

# ------------------------------------

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_no_return = true
warn_unused_ignores = true
check_untyped_defs = true

exclude = [
  "^packages/hop3-agent/src/hop3/builders/java\\.py$",
]
