[tool.poetry]
name = "hop3"
version = "0.2.2"
description = "Simple PaaS - Deploy and manage web applications on a single server"
authors = ["Stefane Fermigier <sf@abilian.com>"]
readme = "README.md"

packages = [
    { include = "hop3_lib", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"

attrs = "*"
click = "^8.1.7"
cleez = "*"
pluggy = "^1.4.0"
svcs = "^24.1.0"

# For the actor system
pyrsistent = "^0.20.0"
cloudpickle = "^3.0.0"
msgpack = "^1.0.8"
eventlet = "^0.36"
pyzmq = "^26"

# System introspection
psutil = "^6.0.0"
py-cpuinfo = "^9.0.0"

# Remove later
devtools = "^0.12.2"
snoop = "^0.4.3"

[tool.poetry.group.dev.dependencies]
abilian-devtools = "^0.5.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
