[tool.poetry]
name = "hop3-server"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@abilian.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "hop3_server", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.10"
rpyc = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
