[project]
name = "hop3-testing"
version = "0.1.0"
description = "Testing utilities for Hop3"
readme = "README.md"
authors = [
    { name = "Stefane Fermigier", email = "sf@abilian.com" }
]
requires-python = ">=3.10, <4"
dependencies = [
    "devtools>=0.12.2",
    "httpcore>=1.0.6",
    "httpx>=0.27.2",
    "paramiko>=3.5.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
hop-test = "hop3_testing.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "abilian-devtools>=0.7",
    "docformatter>=1.7.5",
]
