[project]
name = "hop3-web"
version = "0.2.2"
dependencies = [
    # Web
    "flask<4.0,>=3.0",
    "flask-super<1.0,>=0.2",
    "flask-security-too<6.0,>=5.4",
    "flask-sqlalchemy<4.0,>=3.1",
    "flask-babel<5.0,>=4.0",
    "flask-htmx<1.0,>=0.4",
    "flask-mail<1.0,>=0.10",
    "flask-migrate<5.0,>=4.0",
    "flask-talisman<2.0,>=1.1",
    "flask-vite<1.0,>=0.5",
    "sentry-sdk<3.0,>=2.12",
    # Utils / common
    "python-dotenv>=1.1.0",
    "attrs",
    # CLI
    "click<9.0.0,>=8.1.7",
    "cleez",
    "pluggy<2.0.0,>=1.4.0",
    "svcs<25.0.0,>=24.1.0",
    # ORM / Database
    "sqlalchemy<3.0,>=2.0",
    "sqlalchemy-serializer>=1.4",
    "sqlalchemy-utils<1.0,>=0.41",
    "advanced-alchemy>=1",
    "psycopg2<3.0,>=2.9",
    # System introspection
    "psutil>=6.0",
    "py-cpuinfo>=9.0",
    # Debug
    "devtools>=0.12",
    "snoop>=0.6",
]
authors = [
    { name = "Stefane Fermigier", email = "sf@abilian.com" },
]
requires-python = "<4.0,>=3.10"
description = "Simple PaaS - Deploy and manage web applications on a single server"
readme = "README.md"

[dependency-groups]
dev = [
    # Checkers / linters
    "abilian-devtools<1.0,>=0.7",
    "reuse<5,>=4",
    "infer-types<2.0,>=1.0",
    "types-paramiko<4.0,>=3.4",
    "types-psycopg2<3.0,>=2.9",
    "flask-debugtoolbar<1.0,>=0.15",
    # Tests
    "httpx<1.0,>=0.27",
    "pytest<9.0,>=8.0",
    #
    "pyinfra<4,>=3",
    "msgspec<1.0,>=0.18",
    "watchfiles>=0.24",
]

[tool.pdm.build]
includes = ["src/hop3_web"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.pyright]
exclude = ["src/hop3/util/templating.py"]
