[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = "Nua test flask two"
authors = ["Jerome Dumonteil <jd@abilian.com>"]
license = "MIT"

packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
Flask = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
